panko/tests/testsuite/snapshots/testsuite__layout-panko__tests__cases__execute__constexpr__test_error_in_nested_unary_op.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=layout"
    - "--stop-after=layout"
    - panko/tests/cases/execute/constexpr/test_error_in_nested_unary_op.c
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Error: signed overflow in constant expression
   ╭─[panko/tests/cases/execute/constexpr/test_error_in_nested_unary_op.c:3:12]
   │
 3 │     int x:~-(int)0x8000'0000;
   │            ────────┬────────  
   │                    ╰────────── this expression overflows its type `int`
───╯
